--- a/css/main.less
+++ b/css/main.less
@@ -231,7 +231,8 @@ a:active {
 }
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus{
 	background: transparent;
-	font-weight: bold;
+	font-weight: normal;
+	color: #18aac6;
 }
 ul.nav ul li.dropdown:hover > ul.dropdown-menu {
 	/*  display: block;  */ 
