--- a/css/main.less
+++ b/css/main.less
@@ -130,12 +130,12 @@ a:hover .social-icon {
 		img{
 			height: 380px;
 		}
-		span{
-			margin-top: 20px;
-			display: inline-block;
-			font-weight: 400;
-			font-size: 16px;
-		}
+		// span{
+		// 	margin-top: 20px;
+		// 	display: inline-block;
+		// 	font-weight: 400;
+		// 	font-size: 16px;
+		// }
 	}
 	.grid-small{
 		min-height: 300px;
