--- a/css/main.less
+++ b/css/main.less
@@ -130,12 +130,12 @@ a:hover .social-icon {
 		img{
 			height: 380px;
 		}
-		// span{
-		// 	margin-top: 20px;
-		// 	display: inline-block;
-		// 	font-weight: 400;
-		// 	font-size: 16px;
-		// }
+		span{
+			margin-top: 20px;
+			display: inline-block;
+			font-weight: 400;
+			font-size: 16px;
+		}
 	}
 	.grid-small{
 		min-height: 300px;
@@ -231,6 +231,7 @@ a:active {
 }
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus{
 	background: transparent;
+	font-weight: 100;
 	color: #18aac6;
 }
 ul.nav ul li.dropdown:hover > ul.dropdown-menu {
