--- a/css/main.less
+++ b/css/main.less
@@ -108,7 +108,12 @@ body {
 a:hover .social-icon {
 	text-decoration: none;
 }
-
+.sidebar-testimonials{
+	font-size: 18px;
+	font-weight: 300;
+	line-height: 24px;
+	color: #18aac6;
+}
 .homepage{
 	.top-grid{
 		margin-left: 20px;
