--- a/css/main.less
+++ b/css/main.less
@@ -108,7 +108,7 @@ body {
 a:hover .social-icon {
 	text-decoration: none;
 }
-.sidebar-testimonials{
+h3.sidebar_testimonials{
 	font-size: 18px;
 	font-weight: 300;
 	line-height: 24px;
