--- a/css/main.less
+++ b/css/main.less
@@ -108,11 +108,13 @@ body {
 a:hover .social-icon {
 	text-decoration: none;
 }
-h3.sidebar_testimonials{
+.textwidget{
+	.sidebar_testimonials{
 	font-size: 18px;
 	font-weight: 300;
 	line-height: 24px;
 	color: #18aac6;
+}
 }
 .homepage{
 	.top-grid{
