--- a/css/main.less
+++ b/css/main.less
@@ -173,9 +173,9 @@ a:hover .social-icon {
 	}
 	h2{
 		font-family: 'Open Sans', sans-serif;
-		color: #ff6600;
-		font-size: 28px;
-		font-weight: 100;
+		color: #5d5d5d;
+		font-size: 23px;
+		font-weight: 700;
 	}
 }
 @media screen and (max-width: 992px) {
