--- a/css/main.less
+++ b/css/main.less
@@ -112,7 +112,7 @@ a:hover .social-icon {
 	font-size: 18px;
 	font-weight: 300;
 	line-height: 24px;
-	color: #18aac6;
+	color: #a4d049;
 }
 .homepage{
 	.top-grid{
@@ -237,7 +237,7 @@ a:active {
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus{
 	background: transparent;
 	font-weight: 100;
-	color: #18aac6;
+	color: #a4d049;
 }
 ul.nav ul li.dropdown:hover > ul.dropdown-menu {
 	/*  display: block;  */ 
